# writing-regexps

./: README.md
backend/: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  build-docs.sh
backend/interface-spec/: README.md
backend/regex-executor/: CMakeLists.txt  README.md  doxygen.conf
backend/regex-executor/include/wr22/regex_executor/: capture.hpp  executor.hpp  quantifier_type.hpp  regex.hpp
backend/regex-executor/include/wr22/regex_executor/algorithms/backtracking/: decision.hpp  decision_applicator.hpp  decision_ref.hpp  decision_snapshot.hpp  error_hook.hpp  executor.hpp  failure_reason.hpp  instruction.hpp  interpreter.hpp  interpreter_state.hpp  match_failure.hpp  match_result.hpp  part_executor.hpp  specific_part_executor.hpp  step.hpp
backend/regex-executor/include/wr22/regex_executor/utils/: spanned_ref.hpp
backend/regex-executor/src/: captures.cpp  executor.cpp  regex.cpp
backend/regex-executor/src/algorithms/backtracking/: decision.cpp  executor.cpp  instruction.cpp  interpreter.cpp  match_failure.cpp  match_result.cpp  part_executor.cpp  specific_part_executor.cpp  step.cpp
backend/regex-executor/src/utils/: spanned_ref.cpp
backend/regex-executor/test/src/: test_executor.cpp
backend/regex-explainer/: CMakeLists.txt  README.md  doxygen.conf
backend/regex-explainer/include/wr22/regex_explainer/explanation/: explanation.hpp  explanation_folder.hpp  sample_folder.hpp  upgrade_sample.hpp
backend/regex-explainer/include/wr22/regex_explainer/hints/: hint.hpp  hint_folder.hpp
backend/regex-explainer/src/explanation/: explanation.cpp  explanation_folder.cpp  sample_folder.cpp  upgrade_sample.cpp
backend/regex-explainer/src/hints/: hint.cpp  hint_folder.cpp
backend/regex-parser/: .ycm_extra_conf.py  CMakeLists.txt  Cargo.toml  README.md  build.rs  doxygen.conf
backend/regex-parser-rust/src/: main.rs  parser.rs  regex.rs  utils.rs
backend/regex-parser-rust/src/parser/: regex.lalrpop
backend/regex-parser/include/wr22/regex_parser/parser/: errors.hpp  regex.hpp
backend/regex-parser/include/wr22/regex_parser/regex/: capture.hpp  character_class_data.hpp  character_range.hpp  named_capture_flavor.hpp  part.hpp  spanned_character_range.hpp
backend/regex-parser/include/wr22/regex_parser/span/: span.hpp
backend/regex-parser/include/wr22/regex_parser/utils/: adt.hpp  box.hpp  utf8_string_view.hpp
backend/regex-parser/src/: char.rs  lib.rs  main.rs  regex.rs  tests.rs
backend/regex-parser/src/parser/: capture.cpp  errors.cpp  regex.cpp  regex.lalrpop  regex.peg
backend/regex-parser/src/regex/: character_range.cpp  named_capture_flavor.cpp  part.cpp  spanned_character_range.cpp
backend/regex-parser/src/span/: span.cpp
backend/regex-parser/src/utils/: box.cpp  utf8_string_view.cpp
backend/regex-parser/test/include/regex_parser_tests/: equals_matcher.hpp  vec.hpp
backend/regex-parser/test/src/: regex_parser.cpp  span.cpp  test.cpp
backend/regex-server/: CMakeLists.txt  README.md
backend/regex-server/include/wr22/regex_server/: json_result.hpp  service_error.hpp  webserver.hpp
backend/regex-server/include/wr22/regex_server/service_error/: internal_error.hpp  invalid_request_json.hpp  invalid_request_json_structure.hpp  invalid_utf8.hpp  not_implemented.hpp
backend/regex-server/src/: main.cpp
backend/regex-server/src/regex_server/: json_result.cpp  service_error.cpp  webserver.cpp
backend/rustcxx-cxx/: Cargo.toml  sample_config.json
backend/rustcxx-cxx/src/: bindings.rs  datatype.rs  function.rs  main.rs  mangle.rs  separator.rs
backend/unicode/: CMakeLists.txt  README.md  doxygen.conf
backend/unicode/include/wr22/unicode/: conversion.hpp
backend/unicode/src/: conversion.cpp
backend/utils/: CMakeLists.txt  README.md  doxygen.conf
backend/utils/include/wr22/utils/: adt.hpp  box.hpp  nonconcurrent_semaphore.hpp
backend/utils/src/: box.cpp  nonconcurrent_semaphore.cpp
client/: Cargo.toml
client/src/: main.rs
regexp_with_preasure/: plugin.kts
